Added heading of BrewDog Beers

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>BrewDog Beers</title>
 </head>
 <body>
   <!--Form to search with
@@ -16,6 +16,7 @@
     <!--Within the container I need an Item container
       This container will be where each item will go
     -->
+  <h1>BrewDog Beers</h1>
   <form>
     <label for="beer-name">Search By Name: </label>
     <input type="text" name="beer-name" id="beer-name">
