Add a bttn container to hold less Beer and more Beer buttons

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
   
   <div>
     <div id="item-container"></div>
+    <div id='bttn-container'>
+      <button id='less'>Less Beer</button>
+      <button id='more'>More Beer</button>
+    </div>
   </div>
 </body>
 </html>
