Add an id of beer-search to form

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       This container will be where each item will go
     -->
   <h1>BrewDog Beers</h1>
-  <form>
+  <form id='beer-search'>
     <label for="beer-name">Search By Name: </label>
     <input type="text" name="beer-name" id="beer-name">
     <input type="submit" value="Submit">
