--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
   <div>
     <div id="item-container"></div>
     <div id='bttn-container'>
-      <button id='less'>Less Beer</button>
-      <button id='more'>More Beer</button>
+      <button id='previous-page'>Previous Beer</button>
+      <button id='next-page'>More Beer</button>
     </div>
   </div>
 </body>
