--- a/index.html
+++ b/index.html
@@ -9,16 +9,9 @@
   <title>BrewDog Beers</title>
 </head>
 <body>
-  <!--Form to search with
-    This form will contain:
-      input field
-      submit button
-  -->
-  <!--Container-->
-    <!--Within the container I need an Item container
-      This container will be where each item will go
-    -->
-  <h1>BrewDog Beers</h1>
+  <header class="page-header">
+    <img src="https://upload.wikimedia.org/wikipedia/en/3/37/Brewdog_logo.png" alt="BrewDog logo">
+  </header>
   <form id='beer-search'>
     <label for="beer-name">Search By Name: </label>
     <input type="text" name="beer-name" id="beer-name">
