Change the text content of the search submit button

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <form id='beer-search'>
     <label for="beer-name">Search By Name: </label>
     <input type="text" name="beer-name" id="beer-name">
-    <input type="submit" value="Submit">
+    <input type="submit" value="Submit Search">
   </form>
   
   <div>
