Change button id from random to random-bttn

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <input type="text" name="beer-name" id="beer-name">
       <input type="submit" value="Submit Search">
     </form>
-    <button id="random">Random Beer</button>
+    <button id="random-bttn">Random Beer</button>
   </div>
   
   <div>
