Add a footer element with small elements

--- a/index.html
+++ b/index.html
@@ -31,5 +31,9 @@
       <button id='next-page'>Next Page</button>
     </div>
   </div>
+  <footer>
+    <small>Made by: <a href="https://github.com/Arockne">Daniel Calvin</a></small>
+    <small>Made with: <a href="https://punkapi.com/documentation/v2">Punk API</a></small>
+  </footer>
 </body>
 </html>
