Add target attribute assigned to _blank

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     </div>
   </div>
   <footer>
-    <small>Made by: <a href="https://github.com/Arockne">Daniel Calvin</a></small>
-    <small>Made with: <a href="https://punkapi.com/documentation/v2">Punk API</a></small>
+    <small>Made by: <a href="https://www.linkedin.com/in/daniel-calvin-301598170/" target="_blank">Daniel Calvin</a></small>
+    <small>Made with: <a href="https://punkapi.com/documentation/v2" target="_blank">Punk API</a></small>
   </footer>
 </body>
 </html>
