--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
   <title>BrewDog Beers</title>
 </head>
 <body>
+  <!--Heading-->
   <header class="page-header">
     <img src="https://upload.wikimedia.org/wikipedia/en/3/37/Brewdog_logo.png" alt="BrewDog logo">
   </header>
+
+  <!--Search-->
   <div id="search-container">
     <form id='beer-search'>
       <label for="beer-name">Search By Name: </label>
@@ -24,13 +27,16 @@
     <button id="random-bttn">Random Beer</button>
   </div>
   
-  <div>
-    <div id="item-container"></div>
-    <div id='bttn-container'>
-      <button id='previous-page'>Previous Page</button>
-      <button id='next-page'>Next Page</button>
-    </div>
+  <!--Container of Items-->
+  <div id="item-container"></div>
+
+  <!--Buttons-->
+  <div id='bttn-container'>
+    <button id='previous-page'>Previous Page</button>
+    <button id='next-page'>Next Page</button>
   </div>
+
+  <!--Info-->
   <footer>
     <small>Made by: <a href="https://www.linkedin.com/in/daniel-calvin-301598170/" target="_blank">Daniel Calvin</a></small>
     <small>Made with: <a href="https://punkapi.com/documentation/v2" target="_blank">Punk API</a></small>
