Refactor some id attributes with class to lower weight

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   </header>
 
   <!--Search-->
-  <div id="search-container">
-    <form id='beer-search'>
+  <div class="search-container">
+    <form class='beer-search'>
       <label for="beer-name">Search By Name: </label>
       <input type="text" name="beer-name" id="beer-name">
       <input type="submit" value="Submit Search">
@@ -28,10 +28,10 @@
   </div>
   
   <!--Container of Items-->
-  <div id="item-container"></div>
+  <div class="item-container"></div>
 
   <!--Buttons-->
-  <div id='bttn-container'>
+  <div class='bttn-container'>
     <button id='previous-page'>Previous Page</button>
     <button id='next-page'>Next Page</button>
   </div>
