change main header image url

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <!--Heading-->
   <header class="page-header">
-    <img src="https://upload.wikimedia.org/wikipedia/en/3/37/Brewdog_logo.png" alt="BrewDog logo">
+    <img src="https://s3.amazonaws.com/blab-impact-published-production/9UL6eh0EDrIvu1EN497u6utq19f0y208" alt="BrewDog logo">
   </header>
 
   <!--Search-->
